[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/balloon.png" type="Texture" id=1]
[ext_resource path="res://Assets/wind.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Mobile/PumpUpgradePopUp.gd" type="Script" id=3]

[node name="Popup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.215686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDialog/VBoxContainer"]
margin_right = 340.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Upgrade Table"
align = 1
valign = 1

[node name="UpgradeList" type="VBoxContainer" parent="PopupDialog/VBoxContainer"]
margin_top = 34.0
margin_right = 340.0
margin_bottom = 113.0
size_flags_vertical = 3

[node name="UpgradeBalloonsLevel" type="HBoxContainer" parent="PopupDialog/VBoxContainer/UpgradeList"]
margin_right = 340.0
margin_bottom = 36.0
custom_constants/separation = 15

[node name="VSeparator2" type="VSeparator" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeBalloonsLevel"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 21.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( -718.157, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeBalloonsLevel"]
modulate = Color( 1, 0.211765, 0.211765, 1 )
margin_left = 36.0
margin_right = 66.0
margin_bottom = 36.0
rect_min_size = Vector2( 30, 36 )
texture = ExtResource( 1 )
expand = true

[node name="UpgradeLevel" type="Label" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeBalloonsLevel"]
margin_left = 81.0
margin_right = 115.0
margin_bottom = 36.0
rect_min_size = Vector2( 30, 36 )
text = "Lvl. 1"
align = 1
valign = 1

[node name="UpgradeName" type="Label" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeBalloonsLevel"]
margin_left = 130.0
margin_right = 223.0
margin_bottom = 36.0
rect_min_size = Vector2( 30, 36 )
text = "Balloons Level"
align = 1
valign = 1

[node name="UpgradeBalloonsLevelButton" type="Button" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeBalloonsLevel"]
margin_left = 238.0
margin_right = 303.0
margin_bottom = 36.0
rect_min_size = Vector2( 30, 36 )
text = "Upgrade"

[node name="VSeparator" type="VSeparator" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeBalloonsLevel"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 318.0
margin_right = 340.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( -718.157, 18 )
size_flags_horizontal = 3

[node name="UpgradeAirFlow" type="HBoxContainer" parent="PopupDialog/VBoxContainer/UpgradeList"]
margin_top = 40.0
margin_right = 340.0
margin_bottom = 76.0
custom_constants/separation = 15

[node name="VSeparator2" type="VSeparator" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeAirFlow"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 39.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( -718.157, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeAirFlow"]
margin_left = 54.0
margin_right = 90.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
texture = ExtResource( 2 )
expand = true

[node name="UpgradeLevel" type="Label" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeAirFlow"]
margin_left = 105.0
margin_right = 139.0
margin_bottom = 36.0
rect_min_size = Vector2( 30, 36 )
text = "Lvl. 1"
align = 1
valign = 1

[node name="UpgradeName" type="Label" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeAirFlow"]
margin_left = 154.0
margin_right = 205.0
margin_bottom = 36.0
rect_min_size = Vector2( 30, 36 )
text = "Air Flow"
align = 1
valign = 1

[node name="UpgradeAirFlowButton" type="Button" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeAirFlow"]
margin_left = 220.0
margin_right = 285.0
margin_bottom = 36.0
rect_min_size = Vector2( 30, 36 )
text = "Upgrade"

[node name="VSeparator" type="VSeparator" parent="PopupDialog/VBoxContainer/UpgradeList/UpgradeAirFlow"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 300.0
margin_right = 340.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( -718.157, 18 )
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="PopupDialog/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 117.0
margin_right = 340.0
margin_bottom = 196.0
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupDialog/VBoxContainer"]
margin_top = 200.0
margin_right = 340.0
margin_bottom = 240.0
alignment = 2

[node name="QuitButton" type="Button" parent="PopupDialog/VBoxContainer/HBoxContainer2"]
margin_left = 240.0
margin_right = 340.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
text = "Quit"

[connection signal="pressed" from="PopupDialog/VBoxContainer/UpgradeList/UpgradeBalloonsLevel/UpgradeBalloonsLevelButton" to="." method="_on_UpgradeBalloonsLevelButton_pressed"]
[connection signal="pressed" from="PopupDialog/VBoxContainer/UpgradeList/UpgradeAirFlow/UpgradeAirFlowButton" to="." method="_on_UpgradeAirFlowButton_pressed"]
[connection signal="pressed" from="PopupDialog/VBoxContainer/HBoxContainer2/QuitButton" to="." method="_on_QuitButton_pressed"]
